<resources>
    <string name="app_name">SafeBand</string>
    <!-- INICIO -->
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar_action">Entrar</string>
    <string name="esqueceu_senha">Esqueceu a senha? Clique aqui</string>
    <string name="cadastrar">Não possui uma conta? Cadastre-se</string>
    <string name="nome">Nome</string>
    <string name="cadastrar_action">Cadastrar</string>
    <string name="voltar_login">Possui uma conta? Faça login</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="email_recuperar_senha">Informe seu e-mail</string>

    <!-- APLICAÇAO -->
    <string name="confirma_seguranca">Confirma estar em segurança?</string>
    <string name="seguro">Estou seguro</string>
    <string name="perigo">Estou em perigo</string>
    <string name="carregando">Carregando...</string>
    <string name="adicionar">Adicionar</string>
    <string name="solicitacoes">Solicitações</string>
    <string name="enviar_solicitacao">Enviar solicitação</string>
    <string name="cancelar">Cancelar</string>
    <string name="digite_email">Digite o email para adicionar aos amigos</string>
    <string name="lista_amigos">Lista de Amigos</string>
    <string name="limpar_coord">Apagar coordenadas de localização</string>
    <string name="sair_conta">Sair da conta</string>
    <string name="trocar_senha">Alterar senha</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
