<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ciano_100"
    tools:context=".RecuperarSenhaActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="50dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_security_black_24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/email_recuperar_senha"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp">

            <EditText
                android:id="@+id/senha_recuperar_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/recuperar_senha_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimaryDark"
                android:text="@string/recuperar_senha"
                android:textColor="@android:color/white"/>


        </LinearLayout>


</RelativeLayout>